--- a/QLBanSach/QLBanSach.csproj
+++ b/QLBanSach/QLBanSach.csproj
@@ -62,6 +62,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormDanhMuc_TLoai.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormDanhMuc_TLoai.designer.cs">
+      <DependentUpon>FormDanhMuc_TLoai.cs</DependentUpon>
+    </Compile>
     <Compile Include="DBAcess.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -74,6 +80,12 @@
     </Compile>
     <Compile Include="FormDangNhap.Designer.cs">
       <DependentUpon>FormDangNhap.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormDichGia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormDichGia.designer.cs">
+      <DependentUpon>FormDichGia.cs</DependentUpon>
     </Compile>
     <Compile Include="FormNgonNgu.cs">
       <SubType>Form</SubType>
@@ -129,8 +141,17 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormNhapSach.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormNhapSach.designer.cs">
+      <DependentUpon>FormNhapSach.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormDanhMuc_TLoai.resx">
+      <DependentUpon>FormDanhMuc_TLoai.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -143,8 +164,14 @@
     <EmbeddedResource Include="FormDangNhap.resx">
       <DependentUpon>FormDangNhap.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormDichGia.resx">
+      <DependentUpon>FormDichGia.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormDoanhThu.resx">
       <DependentUpon>FormDoanhThu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormNgonNgu.resx">
+      <DependentUpon>FormNgonNgu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Formtest.resx">
       <DependentUpon>Formtest.cs</DependentUpon>
@@ -160,6 +187,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormNhapSach.resx">
+      <DependentUpon>FormNhapSach.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
