--- a/QLBanSach/QLBanSach.csproj
+++ b/QLBanSach/QLBanSach.csproj
@@ -62,6 +62,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DanhMuc_TLoai.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DanhMuc_TLoai.designer.cs">
+      <DependentUpon>DanhMuc_TLoai.cs</DependentUpon>
+    </Compile>
     <Compile Include="DBAcess.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -74,6 +80,12 @@
     </Compile>
     <Compile Include="FormDangNhap.Designer.cs">
       <DependentUpon>FormDangNhap.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormDichGia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormDichGia.designer.cs">
+      <DependentUpon>FormDichGia.cs</DependentUpon>
     </Compile>
     <Compile Include="FormNgonNgu.cs">
       <SubType>Form</SubType>
@@ -131,6 +143,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="DanhMuc_TLoai.resx">
+      <DependentUpon>DanhMuc_TLoai.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -142,6 +157,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormDangNhap.resx">
       <DependentUpon>FormDangNhap.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormDichGia.resx">
+      <DependentUpon>FormDichGia.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormDoanhThu.resx">
       <DependentUpon>FormDoanhThu.cs</DependentUpon>
